# yomo-wasmedge-tensorflow

./: .gitignore  LICENSE  README.md  README_CN.md  go.mod  go.sum
flow/: app.go  dependencies.sh
flow/rust_mobilenet_food/: Cargo.toml
flow/rust_mobilenet_food/src/: lib.rs
source/: dependencies.sh  main.go
zipper/: config.yaml  workflow.yaml
